# Compiler

./: .gitignore  README.md  SemEx1  SemEx2  SemEx3
Compiler/: CMakeLists.txt  definitions.h  main.c
Compiler/CodeGenerator/: code_gen.c  code_gen.h
Compiler/Lexer/: dfa_table.c  dfa_table.h  lexer.c  lexer.h
Compiler/Parser/: Parser.c  Parser.h
Compiler/Parser/ParserGenerator/: DataStructures.c  DataStructures.h  Functions.c  Functions.h  PGDataStructures.c  PGDataStructures.h  symbol.c  symbol.h
Compiler/SemanticAnalyzer/: Semantic.c  Semantic.h
Compiler/Shared/: SymbolTableManager.c  SymbolTableManager.h  error.c  error.h  hashtable.c  hashtable.h  token.c  token.h
Lexer/: dfa_table.h
